# VITools

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
notebooks/: 01_phantoms.ipynb  02_scanners.ipynb  utils.py
notebooks/default/phantoms/0/: dicom_to_voxelized.cfg
src/VITools/: __init__.py  artifact_generation.py  dicom_to_voxelized_phantom.py  image_acquisition.py  phantoms.py  pipeline.py
src/VITools/defaults/: Phantom_Default.cfg  Physics_Default.cfg  Protocol_Default.cfg  Recon_Default.cfg  Scanner_Default
test_result/default/phantoms/0/: dicom_to_voxelized.cfg
