[project]
name = "VITools"
version = "0.0.1"
authors = [
  {name="Brandon Nelson", email="brandon.nelson@fda.hhs.gov"},
]
description = "VITools: tools for conducting virtual imaging trials"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
  "monai",
  "pandas",
  "pydicom==2.4.4",
  "pytest",
  "gecatsim @ git+https://github.com/xcist/main.git"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/brandonjnelsonFDA/VIT-Tools"
Issues = "https://github.com/brandonjnelsonFDA/VIT-Tools/issues"
